--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -15,7 +15,7 @@
 /* Slideshow Container */
 .slideshow-container {
     width: 100%;
-    height: 80vh;
+    max-height: 80vh;
     display: flex;
     position: sticky;
     top: 0;
