--- a/frontend/src/components/AS.css
+++ b/frontend/src/components/AS.css
@@ -31,22 +31,22 @@ a {
 }
 
 .introsection {
-  background-color: black;
+  background-color: white;
   padding: 4vh 0;
   justify-content: center;
   display: flex;
   position: sticky;
   top: 0;
-  border: 1px solid white;
+  border: 1px solid black;
 }
 
 .intro {
   max-width: 800px;
-  background-color: black;
+  background-color: white;
   margin: 0 auto;
   text-align: center;
   font-size: 16px;
-  color: white;
+  color: black;
   justify-content: center;
 }
 
@@ -55,11 +55,11 @@ a {
 }
 
 .project {
-  border: 1px solid white;
-  background-color: black;
+  border: 1px solid black;
+  background-color: white;
   height: 80px; /* Fixed height for the project title */
   justify-content: center;
-  color: white;
+  color: black;
   display: flex;
   align-items: center;
   position: sticky;
@@ -68,8 +68,8 @@ a {
 }
 
 .card {
-  background-color: black;
-  border: 1px solid white;
+  background-color: white;
+  border: 1px solid black;
   margin: 0 0;
   /* background-color: beige; */
   padding: 20px;
@@ -80,7 +80,7 @@ a {
 .project-details {
   text-align: left;
   margin-bottom: 20px;
-  color: white;
+  color: black;
 }
 
 .project-details h2 {
@@ -95,12 +95,12 @@ a {
 
 .see-full-project {
   font-size: 16px;
-  color: white;
+  color: black;
   text-decoration: none;
   position: absolute;
   top: 20px;
   right: 20px;
-  border: 1px solid white;
+  border: 1px solid black;
   padding: 5px;
   font-family: "Sohne", Tahoma, sans-serif;
 }
