--- a/frontend/src/components/AS.css
+++ b/frontend/src/components/AS.css
@@ -121,3 +121,78 @@ a {
   margin-right: 10px;
   border: 1px solid black;
 }
+.faq-section {
+  width: 100%;
+  min-height: 100vh;
+  background-color: white;
+  border: 1px solid black;
+  position: sticky;
+  top: 0;
+  align-items: center;
+  justify-content: center;
+  z-index: 2;
+  line-height: 1.6rem;
+}
+.faq {
+  max-width: 800px;
+  margin: 3% auto;
+  padding: 40px 20px;
+  /* border: 1px solid black; */
+  text-align: left;
+  background-color: white;
+}
+
+.faq h2 {
+  font-family: "Iskry", 'Segoe UI', Tahoma, sans-serif;
+  font-size: 24px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.faq-item {
+  border-bottom: 1px solid #ddd;
+  padding: 20px 0;
+  font-family: "Sohne", Tahoma, sans-serif;
+}
+
+.faq-question {
+  display: flex;
+  justify-content: space-between;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.faq-toggle-button {
+  background: none;
+  border: none;
+  font-size: 24px;
+  font-weight: bold;
+  cursor: pointer;
+  color: black;
+  transition: transform 0.3s;
+}
+
+.faq-answer {
+  margin-top: 10px;
+  font-size: 16px;
+  color: black;
+  padding-left: 10px;
+  transition: max-height 0.3s ease-in-out;
+  overflow: hidden;
+}
+
+.faq-item:last-child {
+  border-bottom: none;
+}
+
+.faq-answer {
+  display: block;
+  max-height: 1000px;
+  transition: max-height 0.4s ease-in-out;
+}
+
+.faq-question:hover .faq-toggle-button {
+  transform: scale(1.1);
+}
+
+
