--- a/frontend/src/components/AnimatedSection.css
+++ b/frontend/src/components/AnimatedSection.css
@@ -11,8 +11,19 @@
        url("/assets/fonts/Sohne-Leicht.woff") format("woff");
 }
 
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  
+}
 h1, h2 {
-  font-family: "Iskry", 'Segoe UI', Tahoma, sans-serif;
+  font-family: "Iskry", Arial, Helvetica, sans-serif, sans-serif;
+}
+.fallback-font {
+  font-family: "Sohne", Tahoma, sans-serif;
+  font-weight: 600;
+   /* or another font that supports the ampersand */
 }
 
 p {
@@ -25,9 +36,15 @@ a {
 }
 
 .animated-section {
-  background-color: white;
+  background-color: beige;
   text-align: center;
-  border: 1px solid black;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  
+  
 }
 
 .introsection {
@@ -116,7 +133,7 @@ a {
 }
 
 .gallery-image {
-  height: 482px;
+  height: 50vh;
   width: auto;
   margin-right: 10px;
   border: 1px solid black;
@@ -124,7 +141,7 @@ a {
 .faq-section {
   width: 100%;
   min-height: 100vh;
-  background-color: white;
+  background-color: #edebdb;
   border: 1px solid black;
   position: sticky;
   top: 0;
@@ -135,11 +152,14 @@ a {
 }
 .faq {
   max-width: 800px;
-  margin: 3% auto;
+  flex: 1;
+  height: auto;
+  margin: 3% auto 12% auto;
   padding: 40px 20px;
   /* border: 1px solid black; */
   text-align: left;
-  background-color: white;
+  background-color: #edebdb;
+ 
 }
 
 .faq h2 {
@@ -194,5 +214,59 @@ a {
 .faq-question:hover .faq-toggle-button {
   transform: scale(1.1);
 }
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  border: 1px solid black;
+  background-color: #edebdb;
+  margin-top: auto;
+  position: relative;
+  bottom: 0;
+}
+
+.footer-left,
+.footer-right {
+  display: flex;
+  align-items: center;
+}
+
+.footer-left a {
+  color: black;
+  text-decoration: none;
+  font-size: 14px;
+  margin-right: 15px;
+  display: flex;
+  align-items: center;
+}
+
+.footer-left a:hover {
+  text-decoration: underline;
+}
+
+.icon{
+  font-size: 20px;
+  color: black;
+}
+.icon:hover{
+  color: #555;
+}
+
+.footer-right p {
+  font-size: 14px;
+  margin: 0;
+  text-align: right;
+}
+
+.footer a,
+.footer-right p {
+  color: black;
+}
+
+.footer-right {
+  margin-left: auto;
+}
+
 
 
