--- a/frontend/src/components/AnimatedSection.css
+++ b/frontend/src/components/AnimatedSection.css
@@ -143,8 +143,10 @@ a {
   min-height: 100vh;
   background-color: #edebdb;
   border: 1px solid black;
-  position: sticky;
+  position: relative;
   top: 0;
+  display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   z-index: 2;
@@ -266,6 +268,78 @@ a {
 
 .footer-right {
   margin-left: auto;
+}
+
+/* Mobile view adjustments */
+@media (max-width: 450px) {
+  /* Introduction section */
+ 
+  .project-details h2 {
+    max-width:150px;
+}
+
+  .gallery {
+      gap: 10px;
+  }
+
+  .gallery-image {
+    max-width: 100%;
+    height: 250px;
+  }
+
+  /* FAQ Section */
+  .faq-section {
+      flex: 1;
+      min-height: 90vh;
+  
+  }
+
+  .faq h2 {
+      font-size: 18px; /* Smaller font size for titles */
+  }
+
+  .faq-item {
+      font-size: 14px;
+  }
+
+  .faq-question {
+      display: flex;
+      justify-content: space-between;
+      padding: 8px 0;
+  }
+
+  .faq-toggle-button {
+      font-size: 12px; /* Smaller button size */
+  }
+
+  /* Footer */
+  .footer-left, .footer-right {
+      font-size: 12px;
+      text-align: center;
+  }
+
+  .footer-left {
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+  }
+  .footer {
+    flex-direction: row;
+    margin-top: auto;
+    justify-content: space-between;
+    bottom: 0;
+    position: relative;
+  }
+
+.footer-left,
+.footer-right {
+    margin-bottom: 0;
+}
+.footer-right p {
+  font-size: 15px;
+  margin: 0;
+  text-align: right;
+}
 }
 
 
