--- a/frontend/src/pages/About.css
+++ b/frontend/src/pages/About.css
@@ -5,6 +5,7 @@
     flex-direction: column;
     gap: 40px;
     padding: 20px;
+    font-weight:bold;
 }
 
 /* Section 1 Styling */
@@ -77,10 +78,11 @@
     padding: 20px;
     border-radius: 8px;
     font-size: 1rem;
-    color: #555;
+    color: black;
     display: flex;
     align-items: center;
     justify-content: center;
+    font-weight: 500;
     text-align: center;
     transition: background-color 0.3s ease;
 }
@@ -90,5 +92,47 @@
 }
 /* About.css */
 
+@media (max-width: 500px) {
+    .about-page{
+        padding: 0;
+    }
+    .about-section {
+        text-align: center;
+        display: grid;
+        padding: 0;
+    }
+    
+    .about-image {
+        max-height: 50vh;
+        min-width: 100%;
+        max-width: 100%;
+        margin-bottom: 20px;
+        padding: 0;
+    }
+    .about-image img{
+        border-radius: 0;
+    }
+    .about-text {
+        padding: 10px 10px;
+    }
+    .centered-logo img {
+        height: 30vh;
+    }
+    .centered-text {
+        padding: 0 10px;
+    }
+    .projects-section {
+        padding: 10px;
+    }
+    .project-grid {
+        grid-template-columns: 1fr; /* Stack in a single column */
+    }
+    .projects-section h2 {
+        font-size: 1.5rem; /* Slightly smaller heading */
+    }
+    .project-tile {
+        padding: 15px; /* Reduce padding */
+    }
+}
 
 
