--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -14,10 +14,10 @@
 
 /* Slideshow Container */
 .slideshow-container {
-    width: 100%;
-    max-height: 80vh;
     overflow: hidden;
-    display: flex;
+    width: 100%;
+    height: 80vh;
+    max-height: 80vh;
     position: sticky;
     top: 0;
     justify-content: center;
@@ -46,10 +46,21 @@
 }
 
 /* Slideshow Image */
+.slides {
+    width: 100%; /* Or specify a specific width */
+    height: 100%; /* Or specify a specific height */
+    overflow: hidden; /* Ensures no overflow if the image aspect ratio is different */
+    align-items: center;
+    justify-content: center;
+    
+}
 .slides img {
     width: 100%;
+    top: 0;
+    left: 0;
     height: 100%;
     object-fit: cover;
+    
 }
 
 /* Quadrant 3: Social Media Icons and Texts */
@@ -58,7 +69,7 @@
     left: 2%;
     bottom: 3%;
     display: flex;
-    gap: 15px;
+    gap: 13px;
 }
 
 .icon-with-text {
@@ -74,6 +85,9 @@
     align-items:first baseline;
 
 }
+.social-media a[href*="facebook.com"] .social-icon {
+    font-size: 22px;
+}
 
 
 .social-icon:hover{
@@ -85,7 +99,6 @@
     position: absolute;
     top: 5%;
     right: 2%;
-    text-align: right;
     max-width: 10vw;
 }
 
@@ -97,12 +110,14 @@
 
 .nav-links li {
     margin-bottom: 10px; /* Space between each link */
+    text-align: center;
 }
 
 .nav-links a {
     font-size: 18px; /* Set text size to 1.25rem */
     text-decoration: none;
     font-weight: 700;
+    text-align: center;
     color: white;
     font-family: "Iskry", 'Segoe UI', Tahoma, sans-serif;
     transition: color 0.3s ease;
@@ -113,41 +128,36 @@
     color: #555555;
 }
 
-.nav-links .arrow {
-    font-family: Arial, sans-serif; /* Use a different font for the arrow */
-    margin-left: 5px;
-}
-
 .nav-links a:hover .arrow {
     color: #555555;
 }
 /* Mobile view adjustments */
-@media (max-width: 450px) {
+@media (max-width: 500px) {
     /* Slideshow Container */
-    .slideshow-container {
-        max-height: 28vh;
-    }
-
+    
     /* Centered Logo */
     .logo {
-        max-width: 60vw; /* Adjust the logo size */
+        max-width: 100vw; /* Adjust the logo size */
     }
 
     /* Social Media Icons */
     .social-media {
-        left: 5%;
-        bottom: 5%;
+        left: 3%;
+        bottom: 3%;
         gap: 10px;
     }
 
     .social-icon {
         font-size: 20px; /* Smaller icons for mobile */
     }
+    .social-media a[href*="facebook.com"] .social-icon {
+        font-size: 17px;
+    }
 
     /* Navigation Links */
     .nav-links {
         top: 2%;
-        right: 2%;
+        right: 8%;
     }
 
     .nav-links ul {
@@ -157,7 +167,7 @@
     }
 
     .nav-links a {
-        font-size: 10px; /* Reduce text size */
+        font-size: 20px; /* Reduce text size */
     }
 }
 
