--- a/frontend/src/pages/Office.css
+++ b/frontend/src/pages/Office.css
@@ -14,6 +14,8 @@
   text-align: center;
   font-family: "Iskry", Tahoma, sans-serif;
   font-weight: bold;
+  gap: 0;
+  
   
 }
 .office-details {
@@ -23,7 +25,6 @@
   min-height: calc(100vh - [height of slideshow-container]); /* Adjust based on actual height */
   justify-content: center;
   padding: 3vh;
-  border: 1px solid black;
   border: 1px solid black;
   display: flex;
   flex-direction: column;
@@ -71,6 +72,7 @@
   width: 100%;
   margin-bottom: 15px;
   padding: 8px;
+  font-family: "Sohne";
   font-size: 14px;
   box-sizing: border-box;
   resize: none;
@@ -94,9 +96,7 @@
 }
 
 /* Third Section - Google Map */
-.section-map {
-  margin: 50px 0;
-}
+
 
 .section-map iframe {
   width: 100%;
@@ -115,7 +115,7 @@
 
 .work-btn {
   font-size: 18px;
-  width: 10vw;
+  width: 40vw;
   background-color: #000;
   padding: 2vh 0;
   color: #fff;
@@ -173,4 +173,13 @@
 .error-message {
   color: red;
   font-weight: bold;
+}
+@media (max-width: 500px) {
+  .section-one{
+    height: 100%;
+    margin-bottom: 10px;
+  }
+  .form-container{
+    width: 95%;
+  }
 }
