--- a/frontend/src/pages/ProjectDetails.css
+++ b/frontend/src/pages/ProjectDetails.css
@@ -96,7 +96,7 @@
 }
 
 .btn-left, .btn-right {
-  background-color: #f0f0f0;
+  background-color: white;
   padding: 10px 20px;
   border: none;
   color: #444444;
@@ -104,6 +104,7 @@
   text-decoration: none;
   font-family: "Iskry", Tahoma, sans-serif;
   transition: color 0.3s ease;
+  font-weight: bolder;
 }
 
 .btn-left:hover, .btn-right:hover {
@@ -114,3 +115,12 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
+@media (max-width: 500px) {
+  .navigation-buttons {
+    padding: 10px 0;
+    gap: 60px;
+  }
+  .btn-left, .btn-right{
+    padding: 10px 10px;
+  }
+} 
