--- a/frontend/src/pages/Office.css
+++ b/frontend/src/pages/Office.css
@@ -151,8 +151,8 @@
 
 .dialog-content h1 {
   font-family: "Iskry", Tahoma, sans-serif;
-  padding-bottom: 1%;
-  font-size: 2.5em;
+  padding-bottom: 3%;
+  font-size: 2em;
 }
 
 .close-btn {
@@ -181,5 +181,10 @@
   }
   .form-container{
     width: 95%;
+  }
+  .dialog-content {
+    width: 90vw;
+    max-height: 90vh;
+   overflow: scroll;
   }
 }
