--- a/frontend/src/components/AnimatedSection.css
+++ b/frontend/src/components/AnimatedSection.css
@@ -10,6 +10,10 @@
   src: url("/assets/fonts/Sohne-Leicht.woff2") format("woff2"),
        url("/assets/fonts/Sohne-Leicht.woff") format("woff");
 }
+@font-face {
+  font-family: "Archer";
+  src: url("/assets/fonts/archer.OTF") format("opentype");
+}
 
 *{
   padding: 0;
@@ -21,7 +25,7 @@ h1, h2 {
   font-family: "Iskry", Arial, Helvetica, sans-serif, sans-serif;
 }
 p {
-  font-family: "Sohne", Tahoma, sans-serif;
+  font-family: "Archer", Tahoma, sans-serif;
 }
 
 a {
@@ -113,7 +117,7 @@ a {
   right: 20px;
   border: 1px solid black;
   padding: 5px;
-  font-family: "Sohne", Tahoma, sans-serif;
+  font-family: "Archer", Tahoma, sans-serif;
 }
 
 .see-full-project:hover {
@@ -134,11 +138,10 @@ a {
 }
 .faq-section {
   width: 100%;
-  min-height: 100vh;
+  min-height: 96vh;
   background-color: #edebdb;
   border: 1px solid black;
   position: relative;
-  top: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -147,34 +150,34 @@ a {
   line-height: 1.6rem;
 }
 .faq {
-  max-width: 800px;
+  max-width: 100vw;
   flex: 1;
   height: auto;
-  margin: 3% auto 12% auto;
   padding: 40px 20px;
   /* border: 1px solid black; */
   text-align: left;
   background-color: #edebdb;
+  margin: 4vh 0;
  
 }
 
 .faq h2 {
   font-family: "Iskry", 'Segoe UI', Tahoma, sans-serif;
-  font-size: 24px;
-  margin-bottom: 20px;
+  font-size: 2.5rem;
+  margin-bottom: 4vh;
   text-align: center;
 }
 
 .faq-item {
   border-bottom: 1px solid #ddd;
-  padding: 20px;
-  font-family: "Sohne", Tahoma, sans-serif;
+  padding: 40px;
+  font-family: "Archer", Tahoma, sans-serif;
 }
 
 .faq-question {
   display: flex;
   justify-content: space-between;
-  font-size: 18px;
+  font-size: 2rem;
   gap: 1vw;
   cursor: pointer;
 }
