--- a/frontend/src/components/AnimatedSection.css
+++ b/frontend/src/components/AnimatedSection.css
@@ -177,7 +177,7 @@ a {
 .faq-question {
   display: flex;
   justify-content: space-between;
-  font-size: 2rem;
+  font-size: 1.9rem;
   gap: 1vw;
   cursor: pointer;
 }
@@ -292,21 +292,23 @@ a {
   /* FAQ Section */
   .faq-section {
       flex: 1;
-      min-height: 90vh;
+      min-height: 92vh;
   
   }
 
   .faq h2 {
-      font-size: 18px; /* Smaller font size for titles */
+      font-size: 2.2rem; /* Smaller font size for titles */
+      line-height: 40px;
   }
 
   .faq-item {
-      font-size: 14px;
+      padding: 20px 0;
   }
 
   .faq-question {
       display: flex;
       justify-content: space-between;
+      font-size: 1.7rem;
       padding: 8px 0;
   }
 
@@ -320,7 +322,7 @@ a {
   .footer-left {
       display: flex;
       justify-content: center;
-      gap: 10px;
+      gap: 4px;
   }
   .footer {
     flex-direction: row;
