--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -17,7 +17,7 @@
 
 
 /* Slideshow Container */
-.slideshow-container {
+.header-container {
     overflow: hidden;
     width: 100%;
     height: 80vh;
