--- a/frontend/src/pages/Office.css
+++ b/frontend/src/pages/Office.css
@@ -22,7 +22,7 @@
   position: relative;
   background-color: white;
   z-index: 2;
-  min-height: calc(100vh - [height of slideshow-container]); /* Adjust based on actual height */
+  min-height: calc(100vh - [height of header-container]); /* Adjust based on actual height */
   justify-content: center;
   padding: 3vh;
   border: 1px solid black;
